--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -2,4 +2,30 @@
     background-color: $color-primary;
     grid-column: sidebar-start / sidebar-end;
     grid-row: 1 / -1; // all possible height
+
+    display: flex;
+    justify-content: center;
+}
+
+.nav-btn {
+    border: none;
+    border-radius: 0;
+
+    background-color: #fff;
+    width: 4.5rem;
+    height: 2px;
+    margin-top: 4rem;
+
+    &::before,
+    &::after {
+        content: '';
+        position: absolute;
+        background-color: #fff;
+        width: 4.5rem;
+        height: 2px;
+        display: block;
+    }
+
+    &::before { transform: translateY(-1.5rem); }
+    &::after { transform: translateY(1.35rem); }
 }
