--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -1,4 +1,46 @@
 .realtors {
     background-color: $color-secondary;
     grid-column: col-start 7 / full-end;
+
+    // display: grid;
+    // justify-content: center;
+    // align-content: center;
+    // grid-gap: 2rem;
+    // justify-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2vh;
+
+    &__list {
+        display: grid;
+        grid-template-rows: repeat(3, min-content);
+        grid-gap: 5vh;
+    }
+
+    &__item {
+        display: grid;
+        grid-template-columns: min-content 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-column-gap: 2rem;
+    }
+
+    &__img {
+        grid-row: 1 / -1;
+        height: 8rem;
+        width: 8rem;
+        display: block;
+        border-radius: 50%;
+    }
+
+    &__name {
+        align-self: end;
+        color: #fff;
+    }
+
+    &__sales {
+        color: $color-grey-light-2;
+        grid-column: 2 / 3;
+    }
 }
