media queries for tablet and mobile builded

--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -5,6 +5,16 @@
 
     display: flex;
     justify-content: center;
+
+    @media only screen and (max-width: $bp-large) {
+        grid-row: 1 / 2; 
+        grid-column: 1 / -1;
+        justify-content: flex-end;
+
+        position: sticky;
+        top: 0;
+        z-index: 99;
+    }
 }
 
 .nav-btn {
@@ -28,4 +38,8 @@
 
     &::before { transform: translateY(-1.5rem); }
     &::after { transform: translateY(1.35rem); }
+
+    @media only screen and (max-width: $bp-large) {
+        margin-right: 3rem;
+    }
 }
