--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -13,10 +13,30 @@
     align-items: center;
     gap: 2vh;
 
+    @media only screen and (max-width: $bp-medium) {
+        grid-column: 1 / -1;
+        padding: 4.5rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+        padding: 3rem;
+    }
+
     &__list {
         display: grid;
         grid-template-rows: repeat(3, min-content);
         grid-gap: 5vh;
+
+        @media only screen and (max-width: $bp-medium) {
+            grid-template-columns: repeat(3, max-content);
+            grid-template-rows: min-content;
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            grid-template-rows: repeat(3, min-content);
+            grid-template-columns: max-content;
+            grid-gap: 3vh;
+        }
     }
 
     &__item {
